--- a/estilos/teste.html
+++ b/estilos/teste.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="favicon.ico">
-    <link rel="stylesheet" href="estilos/style.css">
-    <title>projetos redes sociais</title>
+    <link rel="stylesheet" href="estilo2.css">
+    <title>teste celular</title>
 </head>
 <body>
-    
     <main>
         <section id="telefone">
 
-        </section>
-        <section id="redes-sociais">
 
         </section>
+        <section id="redesocial">
+
+        </section>
+
     </main>
     
 </body>
