--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="favicon.ico">
+    <link rel="stylesheet" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
     <title>projetos redes sociais</title>
 </head>
@@ -18,7 +18,7 @@
             <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a> <br>
             <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a> <br>
             <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="instagram"></a> <br>
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="twitter"></a> <br>
             <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a> <br>
 
         </section>
